@@ -1,3 +1,6 @@
+2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
+	* CellProcessingScript.m:  Now uses the newer method for determining which window sizes to use when calculating the MSD on input data.
+
 2011-04-19  Jeremy Cribb <jcribb@email.unc.edu>
 	* CellProcessingScript.m:  Adds both plots to the output and saves the figures as Matlab .fig files as well as .png files.
 
